# unsq_eve

./: .clang-format  .gitignore  CMakeLists.txt  README.md  eve_ranges.md  find.html  inclusive_scan.html  index.html  min_element.html  reduce.html  remove.html  reverse.html  set_intersection.html  transform.html
data/: all.json
data/apple_m1/: eve_any_of.json  eve_copy_if_dense.json  eve_copy_if_sparse.json  eve_find.json  eve_inclusive_scan.json  eve_min_element.json  eve_mismatch.json  eve_reduce.json  eve_remove_dense.json  eve_remove_sparse.json  eve_reverse.json  eve_set_intersection.json  eve_set_intersection_dense.json  eve_set_intersection_smaller_0.json  eve_set_intersection_sparse.json  eve_transform.json  std_copy_if.json  std_find.json  std_inclusive_scan.json  std_min_element.json  std_mismatch.json  std_reduce.json  std_remove.json  std_reverse.json  std_set_intersection.json  std_transform.json  unsq_eve_find_unguarded.json
data/apple_m2/: eve_any_of.json  eve_copy_if_dense.json  eve_copy_if_sparse.json  eve_find.json  eve_inclusive_scan.json  eve_min_element.json  eve_mismatch.json  eve_reduce.json  eve_reduce_min.json  eve_remove.json  eve_remove_dense.json  eve_remove_sparse.json  eve_reverse.json  eve_search.json  eve_search_one.json  eve_set_intersection_dense.json  eve_set_intersection_smaller_0.json  eve_set_intersection_sparse.json  eve_transform.json  std_copy_if.json  std_find.json  std_inclusive_scan.json  std_min_element.json  std_mismatch.json  std_reduce.json  std_remove.json  std_reverse.json  std_search.json  std_set_intersection.json  std_transform.json  unsq_eve_find_unguarded.json  unsq_eve_min_element.json
data/intel_9700K/: eve_any_of.json  eve_find.json  eve_inclusive_scan.json  eve_reduce.json  eve_remove.json  eve_remove_unroll.json  eve_reverse.json  std_find.json  std_inclusive_scan.json  std_min_element.json  std_reduce.json  std_remove.json  std_reverse.json  std_transform.json  unsq_eve_any_of.json  unsq_eve_any_of_default_any.json  unsq_eve_any_of_use_extra_any.json  unsq_eve_find_guarded.json  unsq_eve_find_unguarded.json  unsq_eve_inclusive_scan.json  unsq_eve_masked_iteration_transform.json  unsq_eve_min_element.json  unsq_eve_overlapping_stores_inclusive_scan.json  unsq_eve_overlapping_stores_transform.json  unsq_eve_reduce.json  unsq_eve_reduce_min.json  unsq_eve_remove.json  unsq_eve_reverse.json  unsq_eve_transform.json  unsq_eve_unaligned_transform.json
data/intel_9700K_avx2/: eve_any_of.json  eve_copy_if_dense.json  eve_copy_if_sparse.json  eve_find.json  eve_inclusive_scan.json  eve_min_element.json  eve_mismatch.json  eve_reduce.json  eve_remove.json  eve_remove_dense.json  eve_remove_sparse.json  eve_reverse.json  eve_search_one.json  eve_set_intersection_dense.json  eve_set_intersection_smaller_0.json  eve_set_intersection_sparse.json  eve_transform.json  std_copy_if.json  std_find.json  std_inclusive_scan.json  std_min_element.json  std_mismatch.json  std_reduce.json  std_remove.json  std_reverse.json  std_set_intersection.json  std_transform.json  unsq_eve_find_unguarded.json
data/intel_9700K_avx2_bmi/: eve_any_of.json  eve_copy_if_dense.json  eve_copy_if_sparse.json  eve_find.json  eve_inclusive_scan.json  eve_min_element.json  eve_mismatch.json  eve_reduce.json  eve_reduce_min.json  eve_remove.json  eve_remove_dense.json  eve_remove_sparse.json  eve_reverse.json  eve_search.json  eve_search_one.json  eve_set_intersection_dense.json  eve_set_intersection_smaller_0.json  eve_set_intersection_sparse.json  eve_transform.json  std_copy_if.json  std_find.json  std_inclusive_scan.json  std_min_element.json  std_mismatch.json  std_reduce.json  std_remove.json  std_reverse.json  std_search.json  std_set_intersection.json  std_transform.json  unsq_eve_find_unguarded.json  unsq_eve_min_element.json  unsq_eve_reduce_min.json  unsq_eve_remove.json  unsq_eve_reverse.json  unsq_eve_transform.json
data/intel_9700K_prev/: std_find.json  unsq_eve_find_unguarded.json
data/intel_9700K_sse2/: eve_any_of.json  eve_copy_if_dense.json  eve_copy_if_sparse.json  eve_find.json  (+25 more)
disassemble/: disassemble.cc  disassemble.s  disassemble.sh  disassemble_apple_clang.sh  disassemble_arm.s  disassemble_arm.sh  dissamble.sh
html/: reduce.html
intel_9700k_vs_amd_ryzen_3600x/: index.html  std_find_strlen.html  std_inclusive_scan.html  std_min_element.html  std_reduce.html  std_remove.html  std_transform.html
scripts/: bench.js  post_process_bench_results.py  run_bench.py
src/: CMakeLists.txt
src/bench/: CMakeLists.txt  bench.h  copy_if.h  eve_any_of.cc  eve_copy_if_dense.cc  eve_copy_if_sparse.cc  eve_find.cc  eve_inclusive_scan.cc  eve_min_element.cc  eve_mismatch.cc  eve_reduce.cc  eve_reduce_min.cc  eve_remove.cc  eve_remove_dense.cc  eve_remove_sparse.cc  eve_remove_unroll.cc  eve_reverse.cc  eve_search.cc  eve_search_one.cc  eve_set_intersection_dense.cc  eve_set_intersection_smaller_0.cc  eve_set_intersection_sparse.cc  eve_transform.cc  find_0.h  ignore_me_simple_inner_product.cc  inplace_transform.h  min.h  mismatch.h  remove.h  search.h  search_121_1111s_bench.h  set_intersection.h  std_copy_if.cc  std_find.cc  std_inclusive_scan.cc  std_min_element.cc  std_mismatch.cc  std_mismatch.cpp  std_reduce.cc  std_remove.cc  (+22 more)
src/test/: CMakeLists.txt  catch_main.cc  eve_extra.t.cc  tts_main.cc
src/test/eve_extra/: any.t.cc  common.h  compress_mask.t.cc  compress_store.t.cc  concepts.t.cc  eve_extra.t.cc  first_true.t.cc  first_true_array.t.cc  load_unsafe.t.cc  mmask_operations.t.cc  reduce_wide.t.cc  replace_ignored.t.cc  reverse.t.cc  scan_wide.t.cc  shift_pair.t.cpp  shift_with.cpp  sort_wide.t.cc  store.t.cc  swap_adjacent_groups.t.cc
src/test/unsq_eve/: all_any_none.t.cc  concepts.t.cc  find.t.cc  find_common.t.cc  find_unguarded.t.cc  inclusive_scan_inplace.t.cc  iteration_main_loop_unrolled.t.cc  min_element.t.cc  other_searches.t.cc  reduce.t.cc  remove.t.cc  reverse.t.cc  simd_base.t.cc  simd_iterator.t.cc  strlen_example.t.cc  transform_inplace.t.cc  transform_reduce.types.t.cc  tuple.t.cc  type_list.t.cc  unroll.t.cc
(+95 files in other folders)
